layout for home and books

--- a/06-inside page/begin/css/layout.css
+++ b/06-inside page/begin/css/layout.css
@@ -13,6 +13,8 @@ main {
   --columns: 16;
 }
 section,
+#inside article,
+#inside aside,
 #devs li {
     --width: 16;
     --gap-constant: 0.3%;
@@ -64,6 +66,13 @@ section,
         float: right;
         margin: 0 0 1rem 1rem;
     }
+
+    #inside article {
+        --width: 7;
+    }
+    #inside aside {
+        --width: 4;
+    }
 }
 @media (min-width: 950px){
     /* keep our math working, move 3rd column to bottom */
@@ -81,6 +90,12 @@ section,
         --width: 3;
         order: 3;
     }
+    #inside article {
+        --width: 10;
+    }
+    #inside aside {
+        --width: 4;
+    }
 }
 @media (min-width: 1200px) {
     #devs ul {
@@ -97,5 +112,12 @@ section,
     #resources {
         --width: 3;
         order: 4;
+    }
+
+    #inside article {
+        --width: 10;
+    }
+    #inside aside {
+        --width: 4;
     }
 }
