--- a/05-home page/begin/css/layout.css
+++ b/05-home page/begin/css/layout.css
@@ -1,6 +1,32 @@
 /* grid system -- mobile first! */
+#devs ul{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    --columns:2;
+}
 
 
+
+main {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    --column:16;
+}
+
+section,
+#devs li {
+    --width: 16;
+    --gap-constant: 0.3%;
+	--initialbasis: calc(var(--width, 0) / var(--columns, 16) * 100%);
+    --gap: calc((var(--columns, 16) - var(--width, 0)) * var(--gap-constant, 0.3%));
+	flex-basis: calc(var(--initialbasis) - var(--gap));
+}
+
+#devs li{
+    --width:1;
+}
 
 
 @media (min-width: 740px) {
@@ -12,10 +38,65 @@
         float: right;
         margin: 0 0 1rem 1rem;
     }
+    main{
+        --columns:11;
+
+    }
+    #first{
+        --width:5;
+        order:1;
+    }
+    #main{
+        --width:6;
+        order:2;
+    }
+    #devs {
+        --width:11 ;
+        order: 3;
+    }
+    #resources {
+        --width: 11;
+        order: 4;
+    }
+    #devs ul{
+        --columns:5;
+    }
 }
 @media (min-width: 950px){
+    main {
+        --columns:14 ;
+    }
+    #first {
+        --width: 5;
+        order: 1;
+    }
+    #main {
+        --width: 6;
+        order: 2;
+    }
+    #devs {
+        --width:14 ;
+        order: 4;
+    }
+    #resources {
+        --width: 3;
+        order: 3;
+    }
 
 }
 @media (min-width: 1200px) {
-    
+    main {
+        --columns: 16;
+    }
+    #devs {
+        --width: 2;
+        order:3;
+    }
+    #resources {
+        order: 4;
+    }
+
+    #devs ul {
+        --columns: 1;
+    }
 }
